# gatebench-lab

./: .gitignore  BENCHMARK_SPEC.md  DESIGN.md  README.md  RUN_LOG.md  SUMMARY.md
apps/gateway-go/: .gitignore  go.mod  main.go
apps/gateway-node/: .env  .env.example  .gitignore  package-lock.json  package.json
apps/gateway-node/src/: index.js
apps/gateway-python/: .env.example  requirements.txt
apps/gateway-python/src/: main.py
apps/gateway-rust/: Cargo.toml
apps/gateway-rust-hyper/: Cargo.toml
apps/gateway-rust-hyper/src/: main.rs
apps/gateway-rust/src/: main.rs
apps/nginx-gateway/: nginx.conf
apps/upstream-echo/: .gitignore  Dockerfile  go.mod  main.go
bench/k6/: http-binary-response.js  http-get.js  http-json-large.js  http-large-response.js  http-proxy-small.js  http-upload-instant.js  http-upload.js  ws-connect.js  ws-echo-size.js  ws-echo.js
bench/wrk/: get.lua  post-json.lua
docs/: RESULTS_SCHEMA.md  index.html
infra/: README.md  docker-compose.yml
results/: MASTER-REPORT.html
results/2026-07-06-MacBook-Pro/: report.html
results/2026-07-06-MacBook-Pro/normalized/: H1.json  H2.json  H3.json  H4.json
results/2026-07-06-jd/: STATUS.md  report.html
results/2026-07-06-jd/normalized/: H1.json  H2.json  H4.json
results/2026-07-06-local-direct/: report.html
results/2026-07-06-xyz-mac/: report.html
results/2026-07-10-tencent-epyc/: report.html
scripts/: combine-reports.ts  generate-report.ts  normalize-results.ts  package-lock.json  package.json  run-all.sh  run-epyc-missing.sh  run-epyc.sh  run-one.sh  run-ws-epyc.sh
(+35 files in other folders)
