[package]
name = "gateway-rust-hyper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
http-body-util = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
