[package]
name = "gateway-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
http-body-util = "0.1"
futures-util = "0.3"
